tests/lean/cdotAtSimpArg.lean.expected.out
y x : Nat
h : y = 0
⊢ Add.add x y = x
y x : Nat
h : y = 0
⊢ Add.add x y = x
cdotAtSimpArg.lean:24:39-25:17: error: unsolved goals
x y : Nat
⊢ Pow.pow x y = Pow.pow y x
